Add climber and gear sprites, gear pickup logic, and collision improvements
- Integrated textured sprites for both climbers using THREE.Sprite
- Added collectible gear items with animated sway and scale
- Implemented flash screen effect on gear pickup
- Updated HUD to show collected gear using emojis
- Improved platform collision detection and grounded logic
- Separated platform creation into reusable createPlatform helper
- Modularized level data and platform placement for player, loadLevel1, loadLevel2
- Updated camera follow and rope physics for smoother movement
- Included Camp Muir milestone overlay and fadeout transition, not working yet

--- a/index.html
+++ b/index.html
@@ -92,6 +92,10 @@
         <li>🍫 Snacks: <span id="snacksCount">10</span></li>
       </ul>
     </div>
+    <div id="gearDisplay" class="hud-box">
+      <span>Gear:</span>
+      <span id="toolsList"></span>
+    </div>
   </div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
