Added new spite images for level 2, added rope distance tracking logic to challenge players, fixed play after pause game pressed, need to fiddle with players distance range at the begining of the game

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         
         <div class="control-box">
           <h3>Desktop</h3>
-          <p><strong>Player 1:</strong> Arrow Keys (←→), Space to jump</p>
+          <p><strong>Player 1:</strong> Arrow Keys (← →), ↑ to jump</p>
           <p><strong>Player 2:</strong> A/D keys, W to jump</p>
           <p><strong>Pause:</strong> Escape key</p>
           <p><em>Control both climbers simultaneously!</em></p>
