Fized water and snack reset on level 2, addded fall logic, though it needs work

--- a/index.html
+++ b/index.html
@@ -109,6 +109,13 @@
     </div>
   </div>
 
+  <!-- Game Over Screen -->
+  <div id="gameOverScreen" class="overlay hidden">
+    <h2>Game Over</h2>
+    <button id="playAgainBtn">Play Again</button>
+    <button id="exitBtn">Exit</button>
+  </div>
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
   <!-- <script type="module">
     import * as THREE from 'https://unpkg.com/three@0.160.1/build/three.module.js';
