Update to design system to make it more user friendly, working out the fall/reset/gameover logic

--- a/index.html
+++ b/index.html
@@ -109,6 +109,12 @@
     </div>
   </div>
 
+  <!-- Fall Overlay -->
+  <div id="fall-overlay" class="overlay hidden">
+    <h2 id="fall-title"></h2>
+    <p id="fall-message"></p>
+  </div>
+
   <!-- Game Over Screen -->
   <div id="gameOverScreen" class="overlay hidden">
     <h2>Game Over</h2>
