Added a Camp Muir Hut to level 1 and level 2, graphic created entirely with Three.js so very minimal. Minor fixes to overall layout.

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       <p><strong>Starting supplies:</strong> 2 liters of water, 10 snacks</p>
 
       <button id="startBtn">Start Climbing!</button>
-      <div id="credit"><p>Built with ♥️ by Maya</p></div>
+      <div id="credit"><p>Built with ♥️ by <a class="maya-portfolio-link" href="https://maya.mcpherson.io" target="_blank">Maya</a></p></div>
     </div>
   </div>
 
