Updated README.md, added a demo image for the repo, minor fixes to level components.

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       </div>
 
       <p><strong>Goal:</strong> Reach the summit at 14,410 feet! Manage your water and snacks wisely.</p>
-      <p><strong>Starting supplies:</strong> 2 liters of water, 10 snacks</p>
+      <p><strong>Starting supplies:</strong> 2 liters of water and 1000 calories</p>
 
       <button id="startBtn">Start Climbing!</button>
       <div id="credit"><p>Built with ♥️ by <a class="maya-portfolio-link" href="https://maya.mcpherson.io" target="_blank">Maya</a></p></div>
@@ -114,8 +114,8 @@
   <div id="pauseMenu">
     <div class="pause-content">
       <h2>Game Paused</h2>
-      <button class="pause-btn" id="resumeBtn">Resume</button>
-      <button class="pause-btn" id="restartBtn">Restart</button>
+      <button class="pause-btn" id="resumeBtn" style="font-family: 'DynaPuff', cursive;">Resume</button>
+      <button class="pause-btn" id="restartBtn" style="font-family: 'DynaPuff', cursive;">Restart</button>
     </div>
   </div>
 
@@ -161,8 +161,8 @@
       <h2>Game Over</h2>
       <p id="gameOverMessage"></p>
       <div class="gameover-actions">
-        <button id="playAgainBtn" class="pause-btn">Play Again</button>
-        <button id="exitBtn" class="pause-btn">Exit</button>
+        <button id="playAgainBtn" class="pause-btn" style="font-family: 'DynaPuff', cursive;">Play Again</button>
+        <button id="exitBtn" class="pause-btn" style="font-family: 'DynaPuff', cursive;">Exit</button>
       </div>
     </div>
   </div>
