Added browser link.

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           <h3>Desktop</h3>
           <p><strong>Player 1:</strong> Arrow Keys (← →), ↑ to jump</p>
           <p><strong>Player 2:</strong> A/D keys, W to jump</p>
-          <p><strong>Pause:</strong> Escape key</p>
+          <p><strong>Pause/Resume:</strong> Escape key</p>
           <p><strong>Sound On/Off:</strong> M key</p>
           <p><em>Control both climbers simultaneously!</em></p>
         </div>
